@@ -23,6 +23,7 @@ public class DispatchQueueServiceImpl implements DispatchQueueService {
 
     private final DispatchRepository dispatchRepository;
     private final DispatchMapper dispatchMapper;
+    private static final int MAX_RETRIES = 3;
 
     @Override
     public List<Dispatch> getPendingDispatches() {
@@ -30,71 +31,128 @@ public class DispatchQueueServiceImpl implements DispatchQueueService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<DispatchSummaryDTO> getPendingDispatchSummaries() {
-        return dispatchRepository.findPendingDispatchesOrderedByPriority()
+
+        return dispatchRepository
+                .findPendingDispatchesOrderedByPriority()
                 .stream()
                 .map(dispatchMapper::toSummaryDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    @Scheduled(fixedDelay = 60000) // every minute
     @Transactional
+    @Scheduled(fixedDelay = 60000)
     public void processScheduledDispatches() {
-        log.info("Processing scheduled dispatches");
-        List<Dispatch> dueDispatches = dispatchRepository.findScheduledDispatchesDue(LocalDateTime.now());
-        for (Dispatch dispatch : dueDispatches) {
-            if (dispatch.getStatus() == DispatchStatus.PENDING) {
-                log.info("Processing scheduled dispatch: {}", dispatch.getId());
-                // Could trigger auto-assignment here
-            }
+
+        log.info("Checking scheduled dispatches...");
+
+        List<Dispatch> dueDispatches =
+                dispatchRepository.findScheduledDispatchesDue(
+                        LocalDateTime.now());
+
+        if (dueDispatches.isEmpty()) {
+            return;
         }
+
+        dueDispatches.forEach(this::addToQueue);
+
+        log.info(
+                "{} scheduled dispatch(es) moved into queue.",
+                dueDispatches.size()
+        );
     }
 
     @Override
     @Transactional
     public void retryFailedDispatch(String dispatchId) {
-        log.info("Retrying failed dispatch: {}", dispatchId);
-        Dispatch dispatch = dispatchRepository.findById(dispatchId)
-                .orElseThrow(() -> new IllegalArgumentException("Dispatch not found"));
 
-        if (dispatch.getRetryCount() >= 3) {
-            log.warn("Dispatch {} exceeded maximum retry count", dispatchId);
-            dispatch.setStatus(DispatchStatus.FAILED);
-            dispatchRepository.save(dispatch);
+        Dispatch dispatch = dispatchRepository.findById(dispatchId)
+                .orElseThrow(() ->
+                        new IllegalArgumentException(
+                                "Dispatch not found."
+                        ));
+
+        if (dispatch.getStatus() != DispatchStatus.FAILED) {
+            throw new IllegalStateException(
+                    "Only FAILED dispatches can be retried."
+            );
+        }
+
+        if (dispatch.getRetryCount() >= MAX_RETRIES) {
+            log.warn(
+                    "Dispatch {} exceeded retry limit.",
+                    dispatchId
+            );
             return;
         }
 
-        dispatch.setStatus(DispatchStatus.PENDING);
-        dispatch.setRetryCount(dispatch.getRetryCount() + 1);
+        dispatch.setRetryCount(
+                dispatch.getRetryCount() + 1
+        );
+
+        dispatch.setStatus(
+                DispatchStatus.PENDING
+        );
+
         dispatchRepository.save(dispatch);
-    }
 
+        log.info(
+                "Dispatch {} queued for retry.",
+                dispatchId
+        );
+    }
     @Override
+    @Transactional
     public void addToQueue(Dispatch dispatch) {
-        // Already persisted; just ensure status is PENDING
-        if (dispatch.getStatus() != DispatchStatus.PENDING) {
-            dispatch.setStatus(DispatchStatus.PENDING);
-            dispatchRepository.save(dispatch);
-        }
-    }
 
+        if (dispatch.getStatus() == DispatchStatus.PENDING) {
+            return;
+        }
+
+        dispatch.setStatus(
+                DispatchStatus.PENDING
+        );
+
+        dispatchRepository.save(dispatch);
+
+        log.info(
+                "Dispatch {} added to queue.",
+                dispatch.getId()
+        );
+    }
     @Override
     public void removeFromQueue(Dispatch dispatch) {
-        // Mark as cancelled or completed
-        if (dispatch.getStatus() != DispatchStatus.CANCELLED && dispatch.getStatus() != DispatchStatus.DELIVERED) {
-            dispatch.setStatus(DispatchStatus.CANCELLED);
-            dispatchRepository.save(dispatch);
-        }
+
+        log.info(
+                "Dispatch {} removed from queue.",
+                dispatch.getId()
+        );
+
     }
 
     @Override
     @Transactional
-    public void updatePriority(String dispatchId, int priority) {
-        Dispatch dispatch = dispatchRepository.findById(dispatchId)
-                .orElseThrow(() -> new IllegalArgumentException("Dispatch not found"));
+    public void updatePriority(
+            String dispatchId,
+            int priority) {
+
+        Dispatch dispatch =
+                dispatchRepository.findById(dispatchId)
+                        .orElseThrow(() ->
+                                new IllegalArgumentException(
+                                        "Dispatch not found."
+                                ));
+
         dispatch.setPriority(priority);
+
         dispatchRepository.save(dispatch);
-        log.info("Updated priority for dispatch {} to {}", dispatchId, priority);
+
+        log.info(
+                "Priority updated for dispatch {} -> {}",
+                dispatchId,
+                priority
+        );
     }
 }
